profilelist1exp/unpackaged/objects/SFDC_Plan2User__c.object
<CustomObject>
    <description>Connector object that ties an Account Plan to a User.</description>
    <fields>
        <fullName>Role__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc - R.10.2 Custom Field for Account Planning||
SFA -Y/PRM-N||
VAL -  N||
CR# -R10.2 # 35778  ||</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Executive Committee</fullName>
                </value>
                <value>
                    <fullName>Products Lead</fullName>
                </value>
                <value>
                    <fullName>Solution Engineer/Architect</fullName>
                </value>
                <value>
                    <fullName>Sales Management</fullName>
                </value>
                <value>
                    <fullName>Solutions management</fullName>
                </value>
                <value>
                    <fullName>Services Lead</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_Acct_Plan__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc - R.10.2 Custom Field for Account Planning||
SFA -Y/PRM-N||
VAL -  N||
CR# -R10.2 # 35778  ||</description>
        <label>Account Plan</label>
        <referenceTo>SFDC_Acct_Plan__c</referenceTo>
        <relationshipLabel>Plan Member</relationshipLabel>
        <relationshipName>Plan_Member</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc - R.10.2 Custom Field for Account Planning||
SFA -Y/PRM-N||
VAL -  N||
CR# -R10.2 # 35778  ||</description>
        <label>Account Plan Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N70000002MeywEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Plan Member</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Account Plan Team Member Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Member</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>